--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,16 +44,16 @@ body
 
 .header_box
 {
-    display: flex;
-    min-width: 320px;
-    max-width: 13500px;
+    min-width: 300px;
+    max-width: 1920px;
     width: 100%;
     height: 55px;
     background: var(--bg-header);
     border-bottom: 1px solid var(--color-border);
-    position: relative;
-    z-index: 100;
     position: fixed;
+    left: 50%;
+    transform: translate(-50%);
+    z-index: 100;
 }
 
 .header_child
@@ -70,6 +70,7 @@ body
 {
     display: flex;
     margin-top: 10px;
+    margin-left: 25px;
 }
 
 .container_logo > p 
@@ -94,6 +95,7 @@ body
     display: flex;
     list-style: none;
     margin-top: 17px;
+    margin-right: 25px;
 }
 
 .container_nav > ul > li
@@ -119,13 +121,14 @@ body
     max-width: 13500px;
     width: 100%;
     height: 650px;
+    padding-left: 25px;
     background: url(../source/imeges/bg_header.png) no-repeat center center;
 }
 
 .container__control_BH
 {
     padding-top: 235px;
-    min-width: 320px;
+    min-width: 200px;
     max-width: 1400px;
     width: 100%;
     margin: 0 auto;
@@ -819,11 +822,9 @@ main
 { 
     transition: 0.3s;  
     min-width: 320px;
-    max-width: 13500px;
+    max-width: 1920px;
     width: 100%;
     margin: 0 auto;
-    display: grid;
-    justify-content: center;
 }
 footer{ transition: 0.3s; margin: 0 auto;}
 
@@ -919,4 +920,9 @@ footer{ transition: 0.3s; margin: 0 auto;}
     width: 1728px;
     height: 2px;
     background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0.01%, #FFFFFF 49.48%, rgba(255, 255, 255, 0) 100%);
+}
+
+.container__none
+{
+    display: none;
 }
