--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -197,7 +197,7 @@ body
 
 .line__info_courses
 {
-    min-width: 320px;
+    min-width: 100px;
     max-width: 1920px;
     width: 100%;
     margin: 0 auto;
@@ -211,8 +211,11 @@ body
     font-size: 20px;
     font-weight: 400;
     padding-top: 10px;
-    width: 1440px;
+    min-width: 100px;
+    max-width: 1440px;
+    width: 100%;
     margin: 0 auto;
+    padding-left: 25px;
 }  
 
 .line__info_courses > p > .data_courses
@@ -235,8 +238,12 @@ body
 .container_engineer
 {
     display: flex;
+    min-width: 200px;
+    max-width: 1400px;
+    width: 100%;
     margin: 0 auto;
     margin-top: 120px;
+    padding-left: 25px;
 }
 
 .container_engineer::after
@@ -246,7 +253,9 @@ body
     transform: translate(-50%);
     margin-top: 450px;
     content: '';
-    width: 1728px;
+    min-width: 100px;
+    max-width: 1728px;
+    width: 100%;
     height: 2px;
     background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0.01%, #FFFFFF 49.48%, rgba(255, 255, 255, 0) 100%);
 }
