--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -264,14 +264,16 @@ body
 {
     font-size: 48px;
     font-weight: 400;
-    width: 435px;
+    min-width: 200px;
+    max-width: 435px;
 }
 
 .container__text_engineer > p
 {
     font-size: 20px;
     font-weight: 300;
-    width: 435px;
+    min-width: 200px;
+    max-width: 435px;
     margin-top: 15px;
 }
 
