--- a/assets/css/adaptive.css
+++ b/assets/css/adaptive.css
@@ -16,16 +16,7 @@
     }
     .container_engineer::after
     {
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%);
         margin-top: 850px;
-        content: '';
-        min-width: 100px;
-        max-width: 1728px;
-        width: 100%;
-        height: 2px;
-        background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0.01%, #FFFFFF 49.48%, rgba(255, 255, 255, 0) 100%);
     }
     .container__text_engineer
     {
@@ -36,26 +27,59 @@
         margin: 0 auto;
         margin-top: 80px;
     }
+
+    .info_salary > div
+    {
+        margin-left: 70px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .container_salary > h1
+{
+    font-size: 32px;
+    min-width: 200px;
+    max-width: 660px;
+    width: 100%;
+}
+.container_salary > p
+{
+    font-size: 16px;
+    min-width: 200px;
+    max-width: 660px;
+    width: 100%;
+}
+.info_salary > div > p
+{
+    font-size: 16px;
+    font-weight: 400;
+    min-width: 100px;
+    max-width: 250px;
+    width: 100%;
+}
+
+.info_salary > div > p > span 
+{
+    font-weight: 500;
+}
 }
 
 @media (max-width: 768px) {
     .container_engineer::after
     {
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%);
         margin-top: 750px;
-        content: '';
-        min-width: 100px;
-        max-width: 1728px;
-        width: 100%;
-        height: 2px;
-        background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0.01%, #FFFFFF 49.48%, rgba(255, 255, 255, 0) 100%);
     }
     .img_engineer
     {
         width: 420px;
     }
+}
+
+@media (max-width: 650px) {
+    .info_salary
+{
+    display: block;
+}
 }
 
 @media (max-width: 520px) {
@@ -110,16 +134,7 @@
     }
     .container_engineer::after
     {
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%);
-        margin-top: 550px;
-        content: '';
-        min-width: 100px;
-        max-width: 1728px;
-        width: 100%;
-        height: 2px;
-        background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0.01%, #FFFFFF 49.48%, rgba(255, 255, 255, 0) 100%);
+        margin-top: 600px;
     }
     .img_engineer
     {
@@ -141,5 +156,13 @@
     .line__info_courses > p 
     {
         font-size: 14px;
+    }
+}
+
+
+@media (max-width: 332px) {
+    .container_engineer::after
+    {
+        margin-top: 640px;
     }
 }
