--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -239,11 +239,12 @@ body
 {
     display: flex;
     min-width: 200px;
-    max-width: 1400px;
+    max-width: 1460px;
     width: 100%;
     margin: 0 auto;
     margin-top: 120px;
     padding-left: 25px;
+    padding-right: 25px;
 }
 
 .container_engineer::after
@@ -266,6 +267,7 @@ body
     font-weight: 400;
     min-width: 200px;
     max-width: 435px;
+    width: 100%;
 }
 
 .container__text_engineer > p
@@ -274,6 +276,7 @@ body
     font-weight: 300;
     min-width: 200px;
     max-width: 435px;
+    width: 100%;
     margin-top: 15px;
 }
 
@@ -288,6 +291,8 @@ body
 .container_salary
 {
     margin: 0 auto;
+    padding-left: 25px;
+    padding-right: 25px;
     margin-top: 160px;
 }
 
@@ -298,7 +303,9 @@ body
     transform: translate(-50%);
     margin-top: 70px;
     content: '';
-    width: 1728px;
+    min-width: 100px;
+    max-width: 1728px;
+    width: 100%;
     height: 2px;
     background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0.01%, #FFFFFF 49.48%, rgba(255, 255, 255, 0) 100%);
 }
