--- a/assets/css/adaptive.css
+++ b/assets/css/adaptive.css
@@ -6,6 +6,11 @@
         margin-left: 120px;
         margin-top: -20px;
     }
+    .img_company
+    {
+        margin-left: 140px;
+        margin-top: -20px;
+    }
 }
 
 @media (max-width: 1200px) {
@@ -27,7 +32,22 @@
         margin: 0 auto;
         margin-top: 80px;
     }
-
+    /**/
+    .about_company
+    {
+        display: grid;
+        justify-content: center;
+    }
+    .container__text_company
+    {
+        margin: 0 auto;
+    }
+    .img_company
+    {
+        margin: 0 auto;
+        margin-top: 80px;
+    }
+    /**/
     .info_salary > div
     {
         margin-left: 70px;
@@ -73,6 +93,7 @@
     {
         width: 420px;
     }
+
 }
 
 @media (max-width: 650px) {
@@ -137,6 +158,24 @@
         margin-top: 600px;
     }
     .img_engineer
+    {
+        width: 270px;
+    }
+    /* */
+    .container__text_company > h1
+    {
+        font-size: 32px;
+        font-weight: 300;
+        width: 100%;
+    }
+    
+    .container__text_company > p
+    {
+        font-size: 16px;
+        font-weight: 300;
+        width: 100%;
+    }
+    .img_company
     {
         width: 270px;
     }
