--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -360,6 +360,9 @@ body
     display: flex;
     margin: 0 auto;
     margin-top: 180px;
+    padding-left: 25px;
+    padding-right: 25px;
+
 }
 
 .container__text_company > h1
@@ -390,6 +393,8 @@ body
     justify-content: center;
     margin: 0 auto;
     margin-top: 75px;
+    padding-left: 25px;
+    padding-right: 25px;
 }
 
 .container_person::after
@@ -399,7 +404,9 @@ body
     transform: translate(-50%);
     margin-top: -15px;
     content: '';
-    width: 1728px;
+    min-width: 100px;
+    max-width: 1728px;
+    width: 100%;
     height: 2px;
     background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0.01%, #FFFFFF 49.48%, rgba(255, 255, 255, 0) 100%);
 }
