--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -418,7 +418,9 @@ body
     transform: translate(-50%);
     margin-top: 395px;
     content: '';
-    width: 1728px;
+    min-width: 100px;
+    max-width: 1728px;
+    width: 100%;
     height: 2px;
     background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0.01%, #FFFFFF 49.48%, rgba(255, 255, 255, 0) 100%);
 }
@@ -430,7 +432,9 @@ body
 
 .container_cards > .card
 {
-    width: 350px;
+    min-width: 300px;
+    max-width: 340px;
+    width: 100%;
     height: 380px;
     border-width: 0px 2px;
     border-style: solid;
