--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -428,6 +428,12 @@ body
 .container_cards
 {
     display: flex;
+    -webkit-touch-callout: none; 
+    -webkit-user-select: none; 
+    -khtml-user-select: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
 } 
 
 .container_cards > .card
