--- a/assets/css/animatic.css
+++ b/assets/css/animatic.css
@@ -74,7 +74,9 @@
     margin-top: -270px;
     text-align: left;
     margin-left: 35px;
-    width: 280px;
+    min-width: 200px;
+    max-width: 260px;
+    width: 100%;
 }
 
 .korneev:hover > .name_korneev
@@ -95,7 +97,9 @@
     margin-top: -270px;
     text-align: left;
     margin-left: 35px;
-    width: 280px;
+    min-width: 200px;
+    max-width: 260px;
+    width: 100%;
 }
 
 .mazhanov:hover > .name_mazhanov
