--- a/assets/css/adaptive.css
+++ b/assets/css/adaptive.css
@@ -12,6 +12,22 @@
         margin-top: -20px;
     }
 }
+@media (max-width: 1440px) {
+    .wrapper_advantages
+    {
+        grid-template-columns: 1fr;
+    }
+    .text_advantages
+{
+    justify-content: center;
+}
+.text_advantages > p 
+{
+    min-width: 0px;
+    max-width: 650px;
+    width: 100%;
+}
+}
 
 @media (max-width: 1200px) {
     .container_engineer
@@ -210,6 +226,15 @@
     .img_company
     {
         width: 270px;
+    }
+    .containe_advantages > h1
+    {
+        font-size: 32px;
+        font-weight: 300;
+    }
+    .text_advantages > p 
+    {
+        font-size: 16px;
     }
 }
 
