--- a/assets/css/adaptive.css
+++ b/assets/css/adaptive.css
@@ -50,7 +50,7 @@
     .text_services {
         justify-content: center;
     }
-    
+
 }
 
 @media (max-width: 1200px) {
@@ -228,6 +228,10 @@
     {
         margin-left: 25px;
         margin-top: 50px;
+    }
+    .footer_servicse::after
+    {
+        margin-top: -720px;
     }
 }
 
